<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find A Friend For comments!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="str_btn_find">Find</string>
	
	<string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
    </string-array>

    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
    </string-array>
        <string name="btnMe">Me</string>
        <string name="btnFriends">Friends</string>
        <string name="btnSMS">SMS</string>
        <string name="btnOut">Logout</string>
        <string name="btnIn">Login</string>
        <string name="btnClick">Show</string>
        <string name="btnInsert">Insert</string>
        <string name="textcom">Comments</string>
	
	
</resources>
